okd/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ux-questionnaire-api
  name: ux-questionnaire-api
spec:
  replicas: 1
  selector:
    matchLabels:
     app: ux-questionnaire-api        
  template:
    metadata:            
      labels:
        app: ux-questionnaire-api        
    spec:
      containers:
        - name: ux-questionnaire-api
          image: jcgardey/ux-questionnaire:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
